[gd_scene load_steps=4 format=3 uid="uid://d0mniyqf1at8e"]

[ext_resource type="Script" path="res://dev/DayTime/day_main.gd" id="1_5mcb3"]
[ext_resource type="Script" path="res://dev/DayTime/make_product_menu.gd" id="2_b3dyd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjfnl"]

[node name="DayMain" type="Node2D"]
script = ExtResource("1_5mcb3")

[node name="GameWorld" type="CanvasLayer" parent="."]
layer = 0

[node name="ProductButton" type="Button" parent="GameWorld"]
offset_left = 194.0
offset_top = 17.0
offset_right = 343.0
offset_bottom = 83.0
text = "Make Product"

[node name="IngredientLabel" type="Label" parent="GameWorld"]
offset_left = 12.0
offset_top = 144.0
offset_right = 121.0
offset_bottom = 167.0
text = "Ingredients:
ingredient_1: 50
ingredient_2: 50
ingredient_3: 50
ingredient_4: 50"

[node name="ProductLabel" type="Label" parent="GameWorld"]
offset_left = 232.0
offset_top = 147.0
offset_right = 341.0
offset_bottom = 170.0
text = "Items:"

[node name="CustomerLabel" type="Label" parent="GameWorld"]
offset_left = 110.0
offset_top = 311.0
offset_right = 356.0
offset_bottom = 390.0
text = "Current Order: 
Patience:
Customers in line:
"

[node name="Button3" type="Button" parent="GameWorld"]
offset_left = 414.0
offset_top = 314.0
offset_right = 597.0
offset_bottom = 396.0
text = "Serve"

[node name="ProgressLabel" type="Label" parent="GameWorld"]
offset_left = 709.0
offset_top = 197.0
offset_right = 781.0
offset_bottom = 220.0
text = "Progress:"

[node name="ProgressBar" type="ProgressBar" parent="GameWorld"]
offset_left = 704.0
offset_top = 228.0
offset_right = 957.0
offset_bottom = 260.0
max_value = 1.0
step = 0.0
show_percentage = false

[node name="Hire" type="Button" parent="GameWorld"]
offset_left = 732.0
offset_top = 294.0
offset_right = 915.0
offset_bottom = 376.0
text = "Hire ($50 + $1/s)
"

[node name="AutoServeDisplay" type="Control" parent="GameWorld"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label3" type="Label" parent="GameWorld/AutoServeDisplay"]
layout_mode = 0
offset_left = 711.0
offset_top = 290.0
offset_right = 795.0
offset_bottom = 313.0
text = "AutoServe:"

[node name="AutoServe" type="ProgressBar" parent="GameWorld/AutoServeDisplay"]
layout_mode = 0
offset_left = 709.0
offset_top = 319.0
offset_right = 946.0
offset_bottom = 331.0
max_value = 1.0
step = 0.0
show_percentage = false

[node name="Label3" type="Label" parent="GameWorld"]
offset_left = 743.0
offset_top = 570.0
offset_right = 815.0
offset_bottom = 593.0
text = "Day Progress:"

[node name="ProgressBar2" type="ProgressBar" parent="GameWorld"]
offset_left = 738.0
offset_top = 600.0
offset_right = 1109.0
offset_bottom = 630.0
step = 0.0
show_percentage = false

[node name="Button4" type="Button" parent="GameWorld"]
offset_left = 15.0
offset_top = 601.0
offset_right = 113.0
offset_bottom = 639.0
text = "quit"

[node name="Button5" type="Button" parent="GameWorld"]
offset_left = 27.0
offset_top = 20.0
offset_right = 154.0
offset_bottom = 83.0
text = "Toggle Shop"

[node name="StartDay" type="Button" parent="GameWorld"]
offset_left = 727.0
offset_top = 590.0
offset_right = 1123.0
offset_bottom = 639.0
text = "Start Day"

[node name="GameUI" type="CanvasLayer" parent="."]
layer = 5

[node name="Money" type="Label" parent="GameUI"]
offset_left = 9.0
offset_top = 108.0
offset_right = 375.0
offset_bottom = 139.0
text = "Money: $100"

[node name="PopupUI" type="CanvasLayer" parent="."]

[node name="ShopMenu" type="PanelContainer" parent="PopupUI"]
visible = false
offset_left = 171.0
offset_top = 56.0
offset_right = 986.0
offset_bottom = 570.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cjfnl")

[node name="Row" type="HBoxContainer" parent="PopupUI/ShopMenu"]
layout_mode = 2

[node name="Column1" type="VBoxContainer" parent="PopupUI/ShopMenu/Row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PopupUI/ShopMenu/Row/Column1"]
layout_mode = 2
text = "Buy Stock"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Column2" type="VBoxContainer" parent="PopupUI/ShopMenu/Row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PopupUI/ShopMenu/Row/Column2"]
layout_mode = 2
text = "Column 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Column3" type="VBoxContainer" parent="PopupUI/ShopMenu/Row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PopupUI/ShopMenu/Row/Column3"]
layout_mode = 2
text = "Column 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Column4" type="VBoxContainer" parent="PopupUI/ShopMenu/Row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PopupUI/ShopMenu/Row/Column4"]
layout_mode = 2
text = "Column 4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MakeProductMenu" type="Panel" parent="PopupUI"]
visible = false
offset_left = 171.0
offset_top = 56.0
offset_right = 986.0
offset_bottom = 570.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cjfnl")
script = ExtResource("2_b3dyd")

[node name="Ingredient0" type="Button" parent="PopupUI/MakeProductMenu"]
layout_mode = 2
offset_left = 27.0
offset_top = 51.0
offset_right = 132.0
offset_bottom = 82.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Ingredient_0"

[node name="Ingredient1" type="Button" parent="PopupUI/MakeProductMenu"]
layout_mode = 2
offset_left = 189.0
offset_top = 54.0
offset_right = 294.0
offset_bottom = 85.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Ingredient_1"

[node name="Ingredient2" type="Button" parent="PopupUI/MakeProductMenu"]
offset_left = 360.0
offset_top = 51.0
offset_right = 465.0
offset_bottom = 82.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Ingredient_2"

[node name="Ingredient3" type="Button" parent="PopupUI/MakeProductMenu"]
offset_left = 573.0
offset_top = 51.0
offset_right = 678.0
offset_bottom = 82.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Ingredient_3"

[node name="Label" type="Label" parent="PopupUI/MakeProductMenu"]
layout_mode = 0
offset_left = 351.0
offset_top = 267.0
offset_right = 457.0
offset_bottom = 305.0
text = "THE RECIPE"
horizontal_alignment = 1

[node name="Done" type="Button" parent="PopupUI/MakeProductMenu"]
offset_left = 350.0
offset_top = 436.0
offset_right = 455.0
offset_bottom = 467.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Done"

[node name="Label2" type="Label" parent="PopupUI/MakeProductMenu"]
offset_left = 32.0
offset_top = 122.0
offset_right = 217.0
offset_bottom = 301.0
text = "Item Combo 1:
    Ingredient_0 - 1
    Ingredient_1 - 2

Item Combo 2:
    Ingredient_0 - 1
    Ingredient_2 - 2

Item Combo 3:
    Ingredient_0 - 1
    Ingredient_1 - 1
    Ingredient_2 - 1"

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 15
follow_viewport_enabled = true

[connection signal="pressed" from="GameWorld/ProductButton" to="." method="_start_making_product"]
[connection signal="pressed" from="GameWorld/Button3" to="." method="_start_serving_customer"]
[connection signal="pressed" from="GameWorld/Hire" to="." method="_hire_server"]
[connection signal="pressed" from="GameWorld/Button4" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="GameWorld/Button5" to="." method="_toggle_shop_menu"]
[connection signal="pressed" from="GameWorld/StartDay" to="." method="_on_start_day_pressed"]
[connection signal="finish_product" from="PopupUI/MakeProductMenu" to="." method="_finish_product"]
[connection signal="pressed" from="PopupUI/MakeProductMenu/Ingredient0" to="PopupUI/MakeProductMenu" method="_on_ingredient_0_pressed"]
[connection signal="pressed" from="PopupUI/MakeProductMenu/Ingredient1" to="PopupUI/MakeProductMenu" method="_on_ingredient_1_pressed"]
[connection signal="pressed" from="PopupUI/MakeProductMenu/Ingredient2" to="PopupUI/MakeProductMenu" method="_on_ingredient_2_pressed"]
[connection signal="pressed" from="PopupUI/MakeProductMenu/Ingredient3" to="PopupUI/MakeProductMenu" method="_on_ingredient_3_pressed"]
[connection signal="pressed" from="PopupUI/MakeProductMenu/Done" to="PopupUI/MakeProductMenu" method="_on_done_pressed"]
